--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,89 +7,76 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Apptivate_UQMS_WebApp.styles.css" asp-append-version="true" />
-    <link href="~/css/dashboard.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/Sidebar.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="~/Images/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="icon" href="~/Images/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="apple-touch-icon" href="~/Images/apple-touch-icon.png" />
-
 </head>
 <body>
     <header>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMpCJO5h8Zk60pH04z5PsBtc6Y1pFl9JgpU6fAv" crossorigin="anonymous">
-
-
-
-     
+    </header>
 
     <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+        <button id="sidebarToggle">
+            <img src="~/images/menu-icon.png" alt="Toggle Sidebar" class="icon" />
+        </button>
         <div class="sidebar-sticky">
             <div class="logo text-center my-4">
-                <!-- Add your logo here -->
                 <img src="~/images/favicon-32x32.png" alt="Apptivate Logo" class="img-fluid" />
             </div>
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-
-                        <img src="~/svgs/home-1.svg" alt="Dashboard Icon" class="icon" />Home
+                        <img src="~/svgs/home-1.svg" alt="Dashboard Icon" class="icon" /><span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="~/svgs/four-squares-button-of-view-options.svg" alt="Dashboard Icon" class="icon" /> Dashboard
+                        <img src="~/svgs/four-squares-button-of-view-options.svg" alt="Dashboard Icon" class="icon" /><span>Dashboard</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /> Queries
+                        <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /><span>Queries</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="~/svgs/chat-round-svgrepo-com (1).svg" alt="Queries Icon" class="icon" /> Chats
+                        <img src="~/svgs/chat-round-svgrepo-com (1).svg" alt="Queries Icon" class="icon" /><span>Chats</span>
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="DummyTables" asp-action="Index">
-                        <img src="~/svgs/table-alt.svg" alt="Queries Icon" class="icon" /> Dummy Table
+                        <img src="~/svgs/table-alt.svg" alt="Queries Icon" class="icon" /><span>Dummy Table</span>
                     </a>
                 </li>
-
             </ul>
-
 
             <!-- User Profile -->
             <div class="user-profile mt-auto">
                 <div class="d-flex align-items-center">
-                    <img src="~/Svgs//user-id-portrait-svgrepo-com (1).svg" class="rounded-circle" alt="User Image" width="40" height="40" />
+                    <img src="~/Svgs/user-id-portrait-svgrepo-com (1).svg" class="rounded-circle" alt="User Image" width="40" height="40" />
                     <div class="ms-2">
                         <span>Shakshi Patel</span>
                         <small>shakshi123</small>
                     </div>
-
-
                 </div>
             </div>
         </div>
         <form asp-controller="Account" asp-action="Logout" method="post" style="display:inline;">
             <button type="submit" style="background: none; border: none; padding: 0; cursor: pointer;">
-                <img src="~/Svgs/logout.svg" alt="User Image" class="icon" />Logout
+                <img src="~/Svgs/logout.svg" alt="Logout Icon" class="icon" /><span>Logout</span>
             </button>
         </form>
     </nav>
-
-
-
-
 
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
