--- a/wwwroot/css/Sidebar.css
+++ b/wwwroot/css/Sidebar.css
@@ -13,7 +13,7 @@
     bottom: 0;
     left: 0;
     z-index: 100;
-    padding: 18px 0 0;
+    padding: 58px 0px 10px 0 ;
     overflow-x: hidden;
     overflow-y: auto;
     transition: width 0.3s ease;
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 15px;
-    padding-bottom: 20px; /* Padding at the bottom */
+    padding-bottom: 0px; /* Padding at the bottom */
     overflow: hidden;
 }
 
@@ -35,7 +35,7 @@
 
 .container {
     margin-left: 250px;
-    padding: 20px;
+    padding: 0px;
     transition: margin-left 0.3s ease;
 }
 
@@ -46,17 +46,17 @@
 #sidebar .nav-link {
     font-weight: 500;
     color: #333;
-    padding: 10px;
+    padding: 15px;
     display: flex;
     align-items: center;
     transition: all 0.3s ease;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
     #sidebar .nav-link .icon {
         width: 24px;
         height: 24px;
-        margin-right: 10px;
+        margin-right: 15px;
         transition: margin-right 0.3s ease;
     }
 
@@ -74,9 +74,10 @@
     }
 
 .logo {
-    padding: 0px;
+    padding-bottom: 10px;
     text-align: center;
     transition: all 0.3s ease;
+  
 }
 
 #sidebar.sidebar-collapsed .logo {
@@ -85,8 +86,8 @@
 }
 
 .user-profile {
-    margin-top: auto;
-    padding: 10px;
+    margin-top: 50px;
+    padding: 20px;
     border-top: 1px solid #ccc;
     text-align: center;
     transition: padding 0.3s ease;
