Query Page added

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Apptivate_UQMS_WebApp.Models.Account.RegisterViewModel
+﻿@model Apptivate_UQMS_WebApp.Models.Account.LoginViewModel
 @*
  Use the MinimalLayout for Register.cshtml and Login.cshtml
 *@
