--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<link rel="stylesheet" type="text/css" href="~/css/DashBoardPage.css" />
+<link rel="stylesheet" type="text/css" href="~/css/DashboardPage.css" />
 
 <div class="dashboard-container">
     <div class="dashboard-header">
@@ -13,6 +13,7 @@
                 <option>Last Week</option>
             </select>
             <input type="text" placeholder="Search for ticket" />
+             <i class="search-icon">🔍</i> 
         </div>
     </div>
 
