--- a/Views/Query/Queries.cshtml
+++ b/Views/Query/Queries.cshtml
@@ -45,12 +45,15 @@
             </div>
         </div>
 
-      <div class="query-form-section">
+    <!-- Query Form Wrapper -->
+    <div class="query-form-wrapper">
+        <div class="query-header" id="expand-query-form">
             <h2>Create a Query</h2>
-            <p>Write and address new queries and issues</p>
+        </div>
+        <div class="query-form-section collapsed">
             <form class="query-form">
                 <label for="query-subject">Query Subject</label>
-                <input type="text" id="query-subject" placeholder="Type subject">
+                <input type="text" id="query-subject" placeholder="Type subject" />
 
                 <label for="query-type">Request Ticket Type</label>
                 <select id="query-type">
@@ -71,34 +74,25 @@
                     <p>Drag your file(s) to start uploading</p>
                     <span>OR</span>
                     <label for="media-upload" class="upload-btn">Browse files</label>
-                    <input type="file" id="media-upload" style="display: none;">
+                    <input type="file" id="media-upload" style="display: none;" />
                     <p class="file-types">Only support .jpg, .png, .svg, and .zip files</p>
                 </div>
 
                 <button type="submit">Submit</button>
             </form>
-        </div> 
-
         </div>
-
+    </div>
+</div>
 
 @section Scripts {
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript">
-
-$(document).ready(function () {
-    // Toggle the form visibility
-    $('#expand-query-form').on('click', function () {
-        // Toggle visibility of the form section
-        $('.query-form-section').toggleClass('collapsed');
-        // Rotate the add icon
-     
-    });
-});
-
-
-
         $(document).ready(function () {
+            // Toggle the form visibility
+            $('#expand-query-form').on('click', function () {
+                $('.query-form-section').toggleClass('collapsed');
+            });
+
             $('.tab').on('click', function () {
                 var target = $(this).data('target');
 
@@ -108,9 +102,6 @@ $(document).ready(function () {
                 // Load the partial view based on the target
                 $('#ticketContent').load('/Home/' + target);
             });
-
-
-
         });
     </script>
 }
