--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Queries">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Query" asp-action="Queries">
 
                         <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /><span>Queries</span>
                     </a>
