--- a/Views/Query/NewQuery/AcademicQuery.cshtml
+++ b/Views/Query/NewQuery/AcademicQuery.cshtml
@@ -59,7 +59,7 @@
 
         ticketBody.addEventListener('input', function () {
             var remaining = 150 - ticketBody.value.length;
-            charCount.innerHTML = `Maximum 150 characters.<br>Remaining: ${remaining} characters`;  // Use innerHTML instead of textContent to render HTML
+            charCount.innerHTML = `Maximum 150 characters.<br>Remaining: ${remaining} characters`;  
         });
     });
 </script>
